--- a/bienvenue.html
+++ b/bienvenue.html
@@ -8,11 +8,31 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 
-
 <body>
+	<div class="container"> 
+		<div class="row">
+			<div class="col-lg-12 text-center">
+			<h1>BIENVENUE</h1>
+			</div>
+			<div class="col-lg-12 text-center">	
+				<input type="image" src="img/francais.png" name="Drapeau Francais" height="200" width="200"/>
+				<p>FRANCAIS</p>
+			</div>
+			<div class="col-lg-12 text-center">	
+				<input type="image" src="img/anglais.png" alt="Drapeau Anglais" height="180" width="180"/>
+				<p>ANGLAIS</p>
+			</div>
+			<div class="col-lg-12 text-center">
+				<input type="image" src="img/espagne.png" alt="Drapeau Espagne" height="200" width="200"/>
+				<p>ESPAGNE</p>
+			</div>
+		</div>
+	</div>
 
-	<h1>BIENVENUE</h1>
-	<p></p>
+
+
+	
+	
 
 </body>
 </html>
