Ajout des option de langues

--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 <body>
 	<div class="container"> 
 		<div class="row">
+			<!-- Titre de la page -->
 			<div class="col-lg-12 text-center">
-			<h1>BIENVENUE</h1>
+				<font size="+8"><h1>BIENVENUE</h1></font>
 			</div>
+			<!-- Affichage option Francais -->
 			<div class="col-lg-12 text-center">	
-				<input type="image" src="img/francais.png" name="Drapeau Francais" height="200" width="200"/>
+				<a href="Accueil.html" title ="Option francais"><img src="img/francais.png" name="Drapeau Francais" height="200" width="200"/></a>
 				<p>FRANCAIS</p>
 			</div>
+			<!-- Affichage option Anglais -->
 			<div class="col-lg-12 text-center">	
-				<input type="image" src="img/anglais.png" alt="Drapeau Anglais" height="180" width="180"/>
+				<a href="Accueil.html" title ="Option anglais"><img src="img/anglais.png" alt="Drapeau Anglais" height="180" width="180"/></a>
 				<p>ANGLAIS</p>
 			</div>
+			<!-- Affichage option Espagnol -->
 			<div class="col-lg-12 text-center">
-				<input type="image" src="img/espagne.png" alt="Drapeau Espagne" height="200" width="200"/>
+				<a href="Accueil.html" title ="Option espagnol"><img src="img/espagne.png" alt="Drapeau Espagne" height="200" width="200"/></a>
 				<p>ESPAGNE</p>
 			</div>
 		</div>
