--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<!-- Affichage option Anglais -->
 			<div class="col-lg-12 text-center">	
 				<a href="Accueil.html" title ="Option anglais"><img src="img/anglais.png" alt="Drapeau Anglais" height="180" width="180"/></a>
-				<p>ANGLAIS</p>
+				<p style="margin-top:10px;">ANGLAIS</p>
 			</div>
 			<!-- Affichage option Espagnol -->
 			<div class="col-lg-12 text-center">
