--- a/Theme.html
+++ b/Theme.html
@@ -16,13 +16,19 @@
 				<div class="col-lg-12 col-md-12">Thème Égypte : La civilisation de l'Égypte antique prend forme autour de 3150 av. J.-C.[1] avec l'unification politique de la Haute-Égypte au sud et de la Basse-Égypte au nord sous le règne du premier roi et se développe sur plus de trois millénaires[2]. Son histoire est parsemée d'une série de périodes stables politiquement, entrecoupées de plusieurs périodes intermédiaires, plus troublées. L'Égypte antique atteint son apogée sous le Nouvel Empire puis entre dans une période de lent déclin. Le pays subit les assauts répétés de puissances étrangères dans cette période tardive et le règne des pharaons prend officiellement fin en -30 où l'Empire romain conquiert l'Égypte pour en faire une province[3].</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-6 col col-md-6">
+				<div class="col-lg-4 col col-md-6">
 					<img class="image" src="img/collec-1-73.1.6_1 .jpg" height="30%"> 
 				</div>
-				<div class="col-lg-6 col-md-6 text-center">
+				<div class="col-lg-8 col-md-6 ">
 					Titre de l'oeuvre : Livre de mort
 					<div class="row">
-						<div class="col-lg-12">Description œuvre 1 : Date de création : XXVIe dynastie – époque Saïte, VIIe s. av. J.-C.</div>
+						<div class="col-lg-12">Date de création : XXVIe dynastie – époque Saïte, VIIe s. av. J.-C.</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-12">Lieu de création : Egypte</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-12">Matière et technique : Encre sur Papyrus</div>
 					</div>
 				</div>
 			</div>
