--- a/Accueil.html
+++ b/Accueil.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Accueil</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
-<body>
+<body  class="text-center">
     <header>
     
     </header>
@@ -16,21 +20,22 @@
             </div>
         </div>
         <!--visite-->
-        <div class="row">
-            <div class="col-lg-9">
-                <a href="#">visite</a>
+        <div class="row center-block " style="margin-top : 50px">
+            <div class="col-lg-12 center-block">
+            
+                <a class="btn btn-primary" style="width: 200px; font-size: 20px" href="#" role="button">Visite</a>
             </div>
         </div>
         <!--Les artistes-->
-        <div class="row">
-            <div class="col-lg-3">
-                <p>Egypte</p>
+        <div class="row text-center" style="margin-top : 50px; margin-bottom : 50px">
+            <div class="col-lg-4">
+                <a class="btn btn-primary" href="#">Egypte</a>
             </div>
-            <div class="col-lg-3">
-                <p>japon</p>
-            <div>
-            <div class="col-lg-3">
-                <p>Chine</p>
+            <div class="col-lg-4">
+                <a class="btn btn-primary" href="#" >Japon</a>
+            </div>
+            <div class="col-lg-4">
+                <a class="btn btn-primary" href="#" >Chine</a>
             </div>
         </div>
     </div>
