--- a/Presentation.html
+++ b/Presentation.html
@@ -82,7 +82,7 @@
 
         </div>
         <div class="col-6">        
-            <button class="btn btn-primary" src="Theme.html" role="button"> Egypte </button>
+            <a class="btn btn-primary" href="Theme.html" role="button"> Egypte </a>
         </div>
         <div class="col-6">        
                 <button class="btn btn-primary"> Auteur </button>
