modif css et img

--- a/Accueil.html
+++ b/Accueil.html
@@ -7,6 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body  class="text-center">
     <header>
@@ -26,16 +27,43 @@
                 <a class="btn btn-primary" style="width: 200px; font-size: 20px" href="#" role="button">Visite</a>
             </div>
         </div>
+        <div class="row">
+            <h2>A voir en ce moment :</h2>
+        </div>
         <!--Les artistes-->
         <div class="row text-center" style="margin-top : 50px; margin-bottom : 50px">
             <div class="col-lg-4">
-                <a class="btn btn-primary" href="#">Egypte</a>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/Egypte.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Egypte</h5>
+                      <a href="#" class="btn btn-primary">En savoir plus 
+                       <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                  </div>
             </div>
             <div class="col-lg-4">
-                <a class="btn btn-primary" href="#" >Japon</a>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/japon.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Japon</h5>
+                      <a href="#" class="btn btn-primary">En savoir plus 
+                        <i class="fas fa-arrow-right"></i>
+                         </a>                    
+                        </div>
+                  </div>
             </div>
             <div class="col-lg-4">
-                <a class="btn btn-primary" href="#" >Chine</a>
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/chine.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Chine</h5>
+                      <a href="#" class="btn btn-primary">En savoir plus 
+                        <i class="fas fa-arrow-right"></i>
+                         </a>                    
+                        </div>
+                  </div>
             </div>
         </div>
     </div>
