--- a/Theme.html
+++ b/Theme.html
@@ -45,7 +45,7 @@
 		<hr>
 		<div class="row mt-5 mb-5">
 			<div class="col-lg-4 col col-md-6 ">
-				<img class="image" src="images/collec-1-49.264.jpg" height="250"> 
+				<img class="img" src="img/collec-1-49.264.jpg" height="250"> 
 			</div>
 			<div class="d-flex col-lg-8 col-md-6 align-items-center">
 				<div>
@@ -72,13 +72,13 @@
 
 			</div>
 			<div class="col-lg-4 col col-md-6 align-items-center">
-				<img class="image" src="img/collec-1-49.282.jpg" height="300"> 
+				<img class="img" src="img/collec-1-49.282.jpg" height="300"> 
 			</div>
 		</div>
 		<hr>
 		<div class="row mt-5 mb-5">
 			<div class="col-lg-4 col col-md-6">
-				<img class="image" src="img/collec-1-49.265_rc.jpg" height="250"> 
+				<img class="img" src="img/collec-1-49.265_rc.jpg" height="250"> 
 			</div>
 			<div class="d-flex col-lg-8 col-md-6 align-items-center">
 				<div>
