--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="row">
 			<!-- Titre de la page -->
 			<div class="col-lg-12 text-center">
-				<font size="+8"><h1>BIENVENUE</h1></font>
+				<h1>BIENVENUE</h1>
 			</div>
 			<!-- Affichage option Francais -->
 			<div class="col-lg-12 text-center">	
