--- a/Accueil.html
+++ b/Accueil.html
@@ -12,12 +12,33 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body  class="text-center">
-    <header>
-    
-    </header>
+    <div class="container">
+        <div class="row text-white" style="background-color:rgb(76, 44, 57);">
+                        <div class="col-lg-7 d-flex ">
+                                <img src="img/Logo4.png" alt="logo" width="500px">
+                        </div>
+                        <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                            <ul class="nav">
+                                <li class="nav-item">
+                                        <a href="index.html" class="nav-link" style="color:white"><i class="fas fa-flag"></i> Langues</a> 
+
+                                </li>
+                                <li class="nav-item">
+                                        <a href="Accueil.html" class="nav-link" style="color:white"><i class="fas fa-map-marker-alt"></i>
+                                            Plan</a>
+            
+                                </li>
+                                <li class="nav-item">
+                                        <a href="#" style="color:white" class="nav-link"><i class="fas fa-headphones"></i> Audio</a>
+
+                                </li>
+                            </ul>
+                        </div>                                                                           
+        </div>                                 
+</div>  
     <div class="container mt-5">
         <!--Plan-->
-                    <h1 class="Thematique">Plan </h1>
+                    <h1 class="Thematique">PLAN </h1>
         <div class="row">
             <div class="col-lg-12">
                 <img src="img/plan.jpg" width="700px" height="auto" >
