--- a/Presentation.html
+++ b/Presentation.html
@@ -79,11 +79,9 @@
     <div class="row mt-5"> 
 
         <div class="col-6">        
-<<<<<<< HEAD
-            <a class="btn btn-primary" href="Theme.html" role="button"> Egypte </a>
-=======
-            <button class="btn btn-primary mr-2"style="width:500px; height:100px; font-size:40px"> Egypte </button>
->>>>>>> presentation
+
+            <a href="Theme.html" class="btn btn-primary mr-2"style="width:500px; height:100px; font-size:40px"> Egypte </a>
+
         </div>
         <div class="col-6">        
                 <button class="btn btn-primary" style="width:500px; height:100px; font-size:40px"> Auteur </button>
