--- a/Theme.html
+++ b/Theme.html
@@ -53,7 +53,7 @@
 					<p>Date de création : XVIIIe dynastie – XVe s. av. J.-C., XIVe s. av. J.-C.</p>
 					<p>Lieu de création : Thèbes</p>
 					<p>Matière et technique : Calcaire peint</p>
-					<button class="btn btn-primary">Guider vers l'oeuvre <i class="fas fa-arrow-right"></i></button>
+					<a href="Presentation.html" class="btn btn-primary">Guider vers l'oeuvre <i class="fas fa-arrow-right"></i></a>
 				</div>
 
 			</div>
